--- a/Learning_video/templates/base.html
+++ b/Learning_video/templates/base.html
@@ -180,82 +180,26 @@
                 line-height: 30px;
             }
         </style>
-
-
-
-
-
-
-{#    <link rel="stylesheet" href="{% static 'font-awesome/4.7.0/css/font-awesome.min.css' %}">#}
-{#    <link rel="stylesheet" href="{% static 'highlight.js/9.8.0/monokai-sublime.min.css' %}">#}
-{#    <link rel="stylesheet" href="{% static 'app/css/libs/bootstrap/3.3.7/css/bootstrap.min.css' %}">#}
-{#    <link rel="stylesheet" href="{% static 'app/css/libs/katex/0.6.0/katex.min.css' %}">#}
-{#    <link rel="stylesheet" href="{% static 'app/css/libs/videojs/5.11.7/video-js.min.css' %}">#}
-{#    <link rel="stylesheet" href="{% static 'app/css/dest/styles.css' %}?=2016121272249">#}
+{#<script src="{% static 'app/dest/lib/lib.js' %}?=2016121272249"></script>#}
+<script src="{% static 'jquery/2.2.4/jquery.min.js' %}"></script>
+{#<script src="{% static 'ace/1.2.5/ace.js' %}"></script>#}
+{#<script src="{% static 'aliyun/aliyun-oss-sdk-4.3.0.min.js' %}"></script>#}
+{#<script src="{% static 'highlight.js/9.8.0/highlight.min.js' %}"></script>#}
+{#<script src="{% static 'jspdf/1.2.61/jspdf.min.js' %}"></script>#}
+{#<script src="{% static 'plupload/2.1.9/js/plupload.full.min.js' %}"></script>#}
+{#<script src="{% static 'zeroclipboard/2.2.0/ZeroClipboard.min.js' %}"></script>#}
+{#<script src="{% static 'videojs/video.min.js' %}"></script>#}
+{#<script src="{% static 'bootstrap-tour/0.11.0/js/bootstrap-tour.min.js' %}"></script>#}
+{#<script src="{% static 'bootstrap-table/1.11.0/bootstrap-table.min.js' %}"></script>#}
+{#<script src="{% static 'bootstrap-table/1.11.0/locale/bootstrap-table-zh-CN.min.js' %}"></script>#}
+{#<script src="{% static 'bootstrap-table/1.11.0/extensions/filter-control/bootstrap-table-filter-control.min.js' %}"></script>#}
 {##}
-{#    <style>#}
-{#        @font-face {#}
-{#            font-family: "lantingxihei";#}
-{#            src: url("{% static 'fonts/FZLTCXHJW.TTF' %}");#}
-{#        }#}
-{##}
-{#        /* modal 模态框*/#}
-{#        #invite-user .modal-body {#}
-{#            overflow: hidden;#}
-{#        }#}
-{##}
-{#        #invite-user .modal-body .form-label {#}
-{#            margin-bottom: 16px;#}
-{#            font-size: 14px;#}
-{#        }#}
-{##}
-{#        #invite-user .modal-body .form-invite {#}
-{#            width: 80%;#}
-{#            padding: 6px 12px;#}
-{#            background-color: #eeeeee;#}
-{#            border: 1px solid #cccccc;#}
-{#            border-radius: 5px;#}
-{#            float: left;#}
-{#            margin-right: 10px;#}
-{#        }#}
-{##}
-{#        #invite-user .modal-body .msg-modal-style {#}
-{#            background-color: #7dd383;#}
-{#            margin-top: 10px;#}
-{#            padding: 6px 0;#}
-{#            text-align: center;#}
-{#            width: 100%;#}
-{#        }#}
-{##}
-{#        #invite-user .modal-body .modal-flash {#}
-{#            position: absolute;#}
-{#            top: 53px;#}
-{#            right: 74px;#}
-{#            z-index: 999;#}
-{#        }#}
-{##}
-{#        /* end modal */#}
-{##}
-{#        .en-footer {#}
-{#            padding: 30px;#}
-{#            text-align: center;#}
-{#            font-size: 14px;#}
-{#        }#}
-{#    </style>#}
-{##}
-{#    <style style="text/css">#}
-{#        .navbar-banner {#}
-{#            margin-top: 50px;#}
-{#            background: url("/static/img/homepage-bg.png");#}
-{#            background-size: cover;#}
-{#            backgtound-repeat: no-repeat;#}
-{#        }#}
-{#    </style>#}
+{#<script src="{% static 'ravenjs/3.7.0/raven.min.js' %}"></script>#}
 
 </head>
 </html>
 {% block content %}{% endblock %}
 
 
-{#<script src="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>#}
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 {% include 'tail.html' %}
