--- a/Learning_video/templates/paths/index.html
+++ b/Learning_video/templates/paths/index.html
@@ -268,11 +268,11 @@
 		<h4 class="sidebox-title">最热路径</h4>
 	</div>
 	<div class="sidebox-body course-content side-list-body">
-        <a href="/paths/python"><img style="width:25px;height:25px" src="{% static 'img/1471513769430.png' %}"> Python 研发工程师</a>
-        <a href="/paths/bigdata"><img style="width:25px;height:25px" src="{% static 'img/1471513926288.png' %}"> 大数据工程师</a>
-        <a href="/paths/cpp"><img style="width:25px;height:25px" src="{% static 'img/1471513793360.png' %}"> C++ 研发工程师</a>
-        <a href="/paths/security"><img style="width:25px;height:25px" src="{% static 'img/1471513867033.png' %}"> 信息安全工程师</a>
-        <a href="/paths/linuxsys"><img style="width:25px;height:25px" src="{% static 'img/1471514004752.png' %}"> Linux 运维工程师</a>
+        <a href="{% url 'apis:CouresList' %}?tag=Python"><img style="width:25px;height:25px" src="{% static 'img/1471513769430.png' %}"> Python 研发工程师</a>
+        <a href="{% url 'apis:CouresList' %}?tag=大数据"><img style="width:25px;height:25px" src="{% static 'img/1471513926288.png' %}"> 大数据工程师</a>
+        <a href="{% url 'apis:CouresList' %}?tag=C/C++"><img style="width:25px;height:25px" src="{% static 'img/1471513793360.png' %}"> C++ 研发工程师</a>
+        <a href="{% url 'apis:CouresList' %}?tag=网络安全"><img style="width:25px;height:25px" src="{% static 'img/1471513867033.png' %}"> 信息安全工程师</a>
+        <a href="{% url 'apis:CouresList' %}?tag=Linux"><img style="width:25px;height:25px" src="{% static 'img/1471514004752.png' %}"> Linux 运维工程师</a>
 	</div>
     
 </div>
@@ -299,29 +299,24 @@
         data-msg-user=""
         data-msg-system=""
     ></div>
-    <script src="{% static 'app/dest/lib/lib.js' %}?=2016121272249"></script>
-    <script src="{% static 'jquery/2.2.4/jquery.min.js' %}"></script>
-    <script src="{% static 'ace/1.2.5/ace.js' %}"></script>
-    <script src="{% static 'aliyun/aliyun-oss-sdk-4.3.0.min.js' %}"></script>
-    <script src="{% static 'highlight.js/9.8.0/highlight.min.js' %}"></script>
-    <script src="{% static 'jspdf/1.2.61/jspdf.min.js' %}"></script>
-    <script src="{% static 'plupload/2.1.9/js/plupload.full.min.js' %}"></script>
-    <script src="{% static 'zeroclipboard/2.2.0/ZeroClipboard.min.js' %}"></script>
+{#    <script src="{% static 'app/dest/lib/lib.js' %}?=2016121272249"></script>#}
+{#    <script src="{% static 'jquery/2.2.4/jquery.min.js' %}"></script>#}
+{#    <script src="{% static 'ace/1.2.5/ace.js' %}"></script>#}
+{#    <script src="{% static 'aliyun/aliyun-oss-sdk-4.3.0.min.js' %}"></script>#}
+{#    <script src="{% static 'highlight.js/9.8.0/highlight.min.js' %}"></script>#}
+{#    <script src="{% static 'jspdf/1.2.61/jspdf.min.js' %}"></script>#}
+{#    <script src="{% static 'plupload/2.1.9/js/plupload.full.min.js' %}"></script>#}
+{#    <script src="{% static 'zeroclipboard/2.2.0/ZeroClipboard.min.js' %}"></script>#}
     <script src="{% static 'videojs/video.min.js' %}"></script>
-    <script src="{% static 'bootstrap-tour/0.11.0/js/bootstrap-tour.min.js' %}"></script>
-    <script src="{% static 'bootstrap-table/1.11.0/bootstrap-table.min.js' %}"></script>
-    <script src="{% static 'bootstrap-table/1.11.0/locale/bootstrap-table-zh-CN.min.js' %}"></script>
-    <script src="{% static 'bootstrap-table/1.11.0/extensions/filter-control/bootstrap-table-filter-control.min.js' %}"></script>
+{#    <script src="{% static 'bootstrap-tour/0.11.0/js/bootstrap-tour.min.js' %}"></script>#}
+{#    <script src="{% static 'bootstrap-table/1.11.0/bootstrap-table.min.js' %}"></script>#}
+{#    <script src="{% static 'bootstrap-table/1.11.0/locale/bootstrap-table-zh-CN.min.js' %}"></script>#}
+{#    <script src="{% static 'bootstrap-table/1.11.0/extensions/filter-control/bootstrap-table-filter-control.min.js' %}"></script>#}
 
-    <script src="{% static 'ravenjs/3.7.0/raven.min.js' %}"></script>
-    <script>
-        Raven.config('https://bc3878b7ed0a4468a65390bd79e6e73f@sentry.shiyanlou.com/5', {
-            release: '3.12.13'
-        }).install();
-    </script>
+{#    <script src="{% static 'ravenjs/3.7.0/raven.min.js' %}"></script>#}
 
     
-<script src="{% static 'app/dest/base/index.js' %}?=2016121272249"></script>
+{#<script src="{% static 'app/dest/base/index.js' %}?=2016121272249"></script>#}
 <script>
 $('.org-body-courses .media h4').each(function() {
     var h = $(this).height();
